--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,16 +13,25 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@types/styled-components": "^5.1.26",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "jest": "^29.5.0",
+    "jsdom": "^22.1.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.0-rc.5",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "jest-environment-jsdom": "^29.5.0"
   }
 }
